[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/FluidSimulators/DemoSceneFluidSimulator.gd" type="Script" id=1]
[ext_resource path="res://shaders/VelocityForcesShader.tres" type="Shader" id=2]
[ext_resource path="res://shaders/DivergenceShader.tres" type="Shader" id=3]
[ext_resource path="res://shaders/AdvectPaintColorShader.tres" type="Shader" id=4]
[ext_resource path="res://shaders/ViscosityShader.tres" type="Shader" id=5]
[ext_resource path="res://scenes/NestedViewports/PressureViewport.gd" type="Script" id=6]
[ext_resource path="res://scenes/NestedViewports/NestedViewportControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://shaders/PressureShader.tres" type="Shader" id=8]
[ext_resource path="res://shaders/GradientSubtractionShader.tres" type="Shader" id=9]
[ext_resource path="res://shaders/AdvectVelocityWhiteBrushShader.tres" type="Shader" id=10]
[ext_resource path="res://assets/brushes/TeaBagBrush.png" type="Texture" id=12]

[sub_resource type="ViewportTexture" id=23]

[sub_resource type="ShaderMaterial" id=21]
shader = ExtResource( 10 )
shader_param/deltaTime = 0.0166667
shader_param/brushColor = Color( 0, 0, 0, 0 )
shader_param/brushCenterUV = null
shader_param/brushScale = Vector2( 0.15, 0.15 )
shader_param/brushOn = false
shader_param/velocity = SubResource( 23 )
shader_param/brushTexture = ExtResource( 12 )

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/viscosityScale = 64.0

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("VelocityViewport")

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/vorticityScale = 2.0

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("ViscosityViewport")

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 3 )
shader_param/divergenceScale = 1.0

[sub_resource type="ViewportTexture" id=13]
viewport_path = NodePath("VelocityForcesViewport")

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("DivergenceViewport")

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/divergence = SubResource( 14 )

[sub_resource type="ViewportTexture" id=20]
viewport_path = NodePath("VelocityForcesViewport")

[sub_resource type="ShaderMaterial" id=17]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/velocity = SubResource( 20 )

[sub_resource type="ViewportTexture" id=18]
viewport_path = NodePath("PressureViewport")

[sub_resource type="ViewportTexture" id=19]
viewport_path = NodePath("GradientSubtractionViewport")

[sub_resource type="ShaderMaterial" id=22]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/deltaTime = 0.0166667
shader_param/brushColor = Color( 0.898039, 0.537255, 0.615686, 1 )
shader_param/brushCenterUV = null
shader_param/brushScale = Vector2( 0.15, 0.15 )
shader_param/brushMod = 0.05
shader_param/brushOn = false
shader_param/velocity = SubResource( 19 )
shader_param/brushTexture = ExtResource( 12 )

[sub_resource type="ViewportTexture" id=11]
viewport_path = NodePath("DyeViewport")

[node name="FluidSimulator" type="Node"]
script = ExtResource( 1 )

[node name="VelocityViewport" type="Viewport" parent="."]
size = Vector2( 256, 256 )
transparent_bg = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="VelocityViewport"]
material = SubResource( 21 )
centered = false

[node name="ViscosityViewport" parent="." instance=ExtResource( 7 )]
size = Vector2( 256, 256 )
transparent_bg = true
render_target_v_flip = true
levels = 8
shader_material = SubResource( 1 )
texture = SubResource( 2 )

[node name="VelocityForcesViewport" type="Viewport" parent="."]
size = Vector2( 256, 256 )
transparent_bg = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="VelocityForcesViewport"]
material = SubResource( 3 )
texture = SubResource( 9 )
centered = false

[node name="DivergenceViewport" type="Viewport" parent="."]
size = Vector2( 256, 256 )
transparent_bg = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="DivergenceViewport"]
material = SubResource( 12 )
texture = SubResource( 13 )
centered = false

[node name="PressureViewport" parent="." instance=ExtResource( 7 )]
size = Vector2( 256, 256 )
transparent_bg = true
script = ExtResource( 6 )
levels = 16
shader_material = SubResource( 15 )

[node name="GradientSubtractionViewport" type="Viewport" parent="."]
size = Vector2( 256, 256 )
transparent_bg = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="GradientSubtractionViewport"]
material = SubResource( 17 )
texture = SubResource( 18 )
centered = false

[node name="DyeViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="DyeViewport"]
material = SubResource( 22 )
centered = false

[node name="DyeBackBufferViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="DyeBackBufferViewport"]
texture = SubResource( 11 )
centered = false
